<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/screen_background"
    android:padding="25dp">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        app:cardBackgroundColor="@color/lavender"
        app:cardCornerRadius="10dp"
        app:cardElevation="4dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ringkasanSaldo"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/textSaldo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/nilaiNol"
                android:textColor="@color/white"
                android:textSize="32sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="8dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pemasukan"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textPemasukan"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilaiNol"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/pengeluaran"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/textPengeluaran"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/nilaiNol"
                        android:textColor="@color/white"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scrollbars="none">

        <com.google.android.material.chip.ChipGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/chipGroupFilter"
            app:singleLine="true"
            app:singleSelection="true"
            app:selectionRequired="true">

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/chipSemua"
                style="@style/Choice"
                android:textColor="@color/white"
                android:checked="true"
                android:text="@string/semua"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bulanIni"
                style="@style/Choice"
                android:textColor="@color/white"
                android:text="@string/bulanIni"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/bulanLalu"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/bulanLalu"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/tigaBulanTerakhir"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/tigaBulanTerakhir"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/pilihBulan"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/pilihBulan"/>

            <com.google.android.material.chip.Chip
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rentang"
                style="@style/Widget.MaterialComponents.Chip.Choice"
                android:text="@string/rentangTanggal"/>
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="8dp"
        android:text="@string/daftarTransaksi"
        android:textColor="@color/lavender"
        android:textSize="18sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textAlignment="center"/>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:id="@+id/recyclerTransaksi"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:text="@string/tambahTransaksi"
        android:id="@+id/buttonTambah" />

</LinearLayout>